--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   justify-content: space-around;
   justify-content: left;
   font-family: "Open Sans", sans-serif;
-  color: white;
+  color: red;
   padding: 10px;
 }
 .oscuro li {
